[package]
name = "axum-explore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Axum
axum = "0.6.20"
tokio = { version = "1.32.0", features = ["full"] }
httpc-test = "0.1.1"
# Serde
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
anyhow = "1"
